# ERGT

./: .gitattributes  .gitignore  4.txt  5.txt  6.txt  README.md  pyproject.toml
.codex/: implementation_backlog.md  project_context.md
attention/: geo_attention.py
docs/: 00_project_charter.md  01_theoretical_foundation.md  02_operational_definitions.md  03_phase_plan.md  04_proof_stage_protocol.md  05_baseline_transformer_spec.md  06_relational_graph_spec.md  07_emergent_distance_spec.md  08_geo_attention_spec.md  09_metrics_and_ablation_plan.md  10_gate_conditions.md  11_repository_structure.md  12_phase4_dynamic_memory_plan.md  13_phase3_stable_base_plan.md  14_phase3_ratio_matched_plan.md  15_phase3_stable_base_result.md  16_phase3_ratio_matched_t02_result.md  17_physics_aligned_ergt_program.md  18_ergt_position_paper.md  19_adaptive_competitive_alpha_plan.md  20_run02_evidence_consolidation.md  21_open_control_philosophy_contract.md  22_unified_telemetry_schema.md  23_memory_state_instrumentation.md  24_active_adaptive_execution_plan.md  25_attention_rigidity_and_collapse_monitor.md  26_control_family_fairness_audit_v2.md  27_loss_slope_and_trend_analyzer.md  28_parameter_attribution_probe.md  29_adaptive_alpha_controller_v2.md  30_adaptive_memory_controller.md  31_gate_floor_and_noise_controller.md  32_causal_reachability_controller.md  33_normalization_and_distance_scale_controller.md  34_joint_parameter_budget_allocator.md  35_control_separation_scoring.md  36_meta_control_attention_observer.md  37_open_adaptive_relational_control_trainer.md  (+12 more)
(+393 files in other folders)
