[project]
name = "ergt"
version = "0.1.0"
description = "Emergent Relational Geometry Transformer research prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
data = [
  "datasets>=2.18",
  "tokenizers>=0.15",
  "transformers>=4.40",
]
viz = [
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
